Minor update and cleanup.